fix white space issue for small screens

--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ main img{
 
 /*********************************************** *FOOTER* ***************/
 footer{
-	position:absolute;
+	position: fixed;
   bottom:0;
   width:100%;
 	background-color: black;
@@ -243,7 +243,9 @@ form{
 		align-items: center;
 	}
 	main,
-	section{
+	#bio,
+	#portfolio,
+	#contact{
 		height: 88%;
 	}
 	image,
